--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^4.4",
         "iankumu/mpesa": "^2.2",
         "itsmurumba/laravel-mpesa": "^1.0",
         "laravel/framework": "^12.0",
